# flight-ucx-poc

./: .gitignore  CMakeLists.txt  flight_ucx_client.cc  flight_ucx_client.h  flight_ucx_conn.cc  flight_ucx_conn.h  flight_ucx_poc.cc  flight_ucx_server.cc  flight_ucx_server.h  flight_ucx_utils.cc  flight_ucx_utils.h  random_generation.cc  random_generation.h  ucx_mmap_alloc.cc  ucx_mmap_alloc.h
